# Croppilaskuri-GUI

./: .gitignore  .pre-commit-config.yaml  Croplaskuri_gui.py  LICENSE  README.md  app.py  calculations.py  config.py  gui_widgets.py  guide_logic.py  main.py  optimization_criteria.py  pyproject.toml  text_utils.py
docs/: VSCODE_SETUP.md
scripts/: build_exe.py
src/croppilaskuri/: __init__.py  __main__.py
src/croppilaskuri/config/: __init__.py  constants.py  oar_data.py
src/croppilaskuri/core/: __init__.py  calculations.py  guide_logic.py  optimization_criteria.py  types.py
src/croppilaskuri/ui/: main_window.py  styles.py
src/croppilaskuri/ui/panels/: __init__.py  dose_panel.py  oar_panel.py
src/croppilaskuri/ui/widgets/: __init__.py  oar_dialog.py  step_widget.py
src/croppilaskuri/utils/: text.py
tests/: test_calculations.py  test_plan_types.py
